downloaded_docs/lightweight-charts/docs/5.0/api.md
Version: 5.0

On this page

## Enumerations[​](#enumerations "Direct link to Enumerations")

* [MarkerSign](/lightweight-charts/docs/5.0/api/enumerations/MarkerSign)
* [ColorType](/lightweight-charts/docs/5.0/api/enumerations/ColorType)
* [CrosshairMode](/lightweight-charts/docs/5.0/api/enumerations/CrosshairMode)
* [LastPriceAnimationMode](/lightweight-charts/docs/5.0/api/enumerations/LastPriceAnimationMode)
* [LineStyle](/lightweight-charts/docs/5.0/api/enumerations/LineStyle)
* [LineType](/lightweight-charts/docs/5.0/api/enumerations/LineType)
* [MismatchDirection](/lightweight-charts/docs/5.0/api/enumerations/MismatchDirection)
* [PriceLineSource](/lightweight-charts/docs/5.0/api/enumerations/PriceLineSource)
* [PriceScaleMode](/lightweight-charts/docs/5.0/api/enumerations/PriceScaleMode)
* [TickMarkType](/lightweight-charts/docs/5.0/api/enumerations/TickMarkType)
* [TrackingModeExitMode](/lightweight-charts/docs/5.0/api/enumerations/TrackingModeExitMode)

## Interfaces[​](#interfaces "Direct link to Interfaces")

* [AreaData](/lightweight-charts/docs/5.0/api/interfaces/AreaData)
* [AreaStyleOptions](/lightweight-charts/docs/5.0/api/interfaces/AreaStyleOptions)
* [AutoScaleMargins](/lightweight-charts/docs/5.0/api/interfaces/AutoScaleMargins)
* [AutoscaleInfo](/lightweight-charts/docs/5.0/api/interfaces/AutoscaleInfo)
* [AxisDoubleClickOptions](/lightweight-charts/docs/5.0/api/interfaces/AxisDoubleClickOptions)
* [AxisPressedMouseMoveOptions](/lightweight-charts/docs/5.0/api/interfaces/AxisPressedMouseMoveOptions)
* [BarData](/lightweight-charts/docs/5.0/api/interfaces/BarData)
* [BarStyleOptions](/lightweight-charts/docs/5.0/api/interfaces/BarStyleOptions)
* [BarsInfo](/lightweight-charts/docs/5.0/api/interfaces/BarsInfo)
* [BaseValuePrice](/lightweight-charts/docs/5.0/api/interfaces/BaseValuePrice)
* [BaselineData](/lightweight-charts/docs/5.0/api/interfaces/BaselineData)
* [BaselineStyleOptions](/lightweight-charts/docs/5.0/api/interfaces/BaselineStyleOptions)
* [BusinessDay](/lightweight-charts/docs/5.0/api/interfaces/BusinessDay)
* [CandlestickData](/lightweight-charts/docs/5.0/api/interfaces/CandlestickData)
* [CandlestickStyleOptions](/lightweight-charts/docs/5.0/api/interfaces/CandlestickStyleOptions)
* [ChartOptionsBase](/lightweight-charts/docs/5.0/api/interfaces/ChartOptionsBase)
* [ChartOptionsImpl](/lightweight-charts/docs/5.0/api/interfaces/ChartOptionsImpl)
* [CrosshairLineOptions](/lightweight-charts/docs/5.0/api/interfaces/CrosshairLineOptions)
* [CrosshairOptions](/lightweight-charts/docs/5.0/api/interfaces/CrosshairOptions)
* [CustomBarItemData](/lightweight-charts/docs/5.0/api/interfaces/CustomBarItemData)
* [CustomData](/lightweight-charts/docs/5.0/api/interfaces/CustomData)
* [CustomSeriesWhitespaceData](/lightweight-charts/docs/5.0/api/interfaces/CustomSeriesWhitespaceData)
* [CustomStyleOptions](/lightweight-charts/docs/5.0/api/interfaces/CustomStyleOptions)
* [DrawingUtils](/lightweight-charts/docs/5.0/api/interfaces/DrawingUtils)
* [GridLineOptions](/lightweight-charts/docs/5.0/api/interfaces/GridLineOptions)
* [GridOptions](/lightweight-charts/docs/5.0/api/interfaces/GridOptions)
* [HandleScaleOptions](/lightweight-charts/docs/5.0/api/interfaces/HandleScaleOptions)
* [HandleScrollOptions](/lightweight-charts/docs/5.0/api/interfaces/HandleScrollOptions)
* [HistogramData](/lightweight-charts/docs/5.0/api/interfaces/HistogramData)
* [HistogramStyleOptions](/lightweight-charts/docs/5.0/api/interfaces/HistogramStyleOptions)
* [HorzScaleOptions](/lightweight-charts/docs/5.0/api/interfaces/HorzScaleOptions)
* [IChartApi](/lightweight-charts/docs/5.0/api/interfaces/IChartApi)
* [IChartApiBase](/lightweight-charts/docs/5.0/api/interfaces/IChartApiBase)
* [ICustomSeriesPaneRenderer](/lightweight-charts/docs/5.0/api/interfaces/ICustomSeriesPaneRenderer)
* [ICustomSeriesPaneView](/lightweight-charts/docs/5.0/api/interfaces/ICustomSeriesPaneView)
* [IHorzScaleBehavior](/lightweight-charts/docs/5.0/api/interfaces/IHorzScaleBehavior)
* [IPaneApi](/lightweight-charts/docs/5.0/api/interfaces/IPaneApi)
* [IPanePrimitiveBase](/lightweight-charts/docs/5.0/api/interfaces/IPanePrimitiveBase)
* [IPanePrimitivePaneView](/lightweight-charts/docs/5.0/api/interfaces/IPanePrimitivePaneView)
* [IPanePrimitiveWrapper](/lightweight-charts/docs/5.0/api/interfaces/IPanePrimitiveWrapper)
* [IPriceFormatter](/lightweight-charts/docs/5.0/api/interfaces/IPriceFormatter)
* [IPriceLine](/lightweight-charts/docs/5.0/api/interfaces/IPriceLine)
* [IPriceScaleApi](/lightweight-charts/docs/5.0/api/interfaces/IPriceScaleApi)
* [IPrimitivePaneRenderer](/lightweight-charts/docs/5.0/api/interfaces/IPrimitivePaneRenderer)
* [IPrimitivePaneView](/lightweight-charts/docs/5.0/api/interfaces/IPrimitivePaneView)
* [IRange](/lightweight-charts/docs/5.0/api/interfaces/IRange)
* [ISeriesApi](/lightweight-charts/docs/5.0/api/interfaces/ISeriesApi)
* [ISeriesMarkersPluginApi](/lightweight-charts/docs/5.0/api/interfaces/ISeriesMarkersPluginApi)
* [ISeriesPrimitiveAxisView](/lightweight-charts/docs/5.0/api/interfaces/ISeriesPrimitiveAxisView)
* [ISeriesPrimitiveBase](/lightweight-charts/docs/5.0/api/interfaces/ISeriesPrimitiveBase)
* [ISeriesPrimitiveWrapper](/lightweight-charts/docs/5.0/api/interfaces/ISeriesPrimitiveWrapper)
* [ISeriesUpDownMarkerPluginApi](/lightweight-charts/docs/5.0/api/interfaces/ISeriesUpDownMarkerPluginApi)
* [ITimeScaleApi](/lightweight-charts/docs/5.0/api/interfaces/ITimeScaleApi)
* [IYieldCurveChartApi](/lightweight-charts/docs/5.0/api/interfaces/IYieldCurveChartApi)
* [ImageWatermarkOptions](/lightweight-charts/docs/5.0/api/interfaces/ImageWatermarkOptions)
* [KineticScrollOptions](/lightweight-charts/docs/5.0/api/interfaces/KineticScrollOptions)
* [LastValueDataResultWithData](/lightweight-charts/docs/5.0/api/interfaces/LastValueDataResultWithData)
* [LastValueDataResultWithoutData](/lightweight-charts/docs/5.0/api/interfaces/LastValueDataResultWithoutData)
* [LayoutOptions](/lightweight-charts/docs/5.0/api/interfaces/LayoutOptions)
* [LayoutPanesOptions](/lightweight-charts/docs/5.0/api/interfaces/LayoutPanesOptions)
* [LineData](/lightweight-charts/docs/5.0/api/interfaces/LineData)
* [LineStyleOptions](/lightweight-charts/docs/5.0/api/interfaces/LineStyleOptions)
* [LocalizationOptions](/lightweight-charts/docs/5.0/api/interfaces/LocalizationOptions)
* [LocalizationOptionsBase](/lightweight-charts/docs/5.0/api/interfaces/LocalizationOptionsBase)
* [MouseEventParams](/lightweight-charts/docs/5.0/api/interfaces/MouseEventParams)
* [OhlcData](/lightweight-charts/docs/5.0/api/interfaces/OhlcData)
* [PaneAttachedParameter](/lightweight-charts/docs/5.0/api/interfaces/PaneAttachedParameter)
* [PaneRendererCustomData](/lightweight-charts/docs/5.0/api/interfaces/PaneRendererCustomData)
* [PaneSize](/lightweight-charts/docs/5.0/api/interfaces/PaneSize)
* [Point](/lightweight-charts/docs/5.0/api/interfaces/Point)
* [PriceChartLocalizationOptions](/lightweight-charts/docs/5.0/api/interfaces/PriceChartLocalizationOptions)
* [PriceChartOptions](/lightweight-charts/docs/5.0/api/interfaces/PriceChartOptions)
* [PriceFormatBuiltIn](/lightweight-charts/docs/5.0/api/interfaces/PriceFormatBuiltIn)
* [PriceFormatCustom](/lightweight-charts/docs/5.0/api/interfaces/PriceFormatCustom)
* [PriceLineOptions](/lightweight-charts/docs/5.0/api/interfaces/PriceLineOptions)
* [PriceRange](/lightweight-charts/docs/5.0/api/interfaces/PriceRange)
* [PriceScaleMargins](/lightweight-charts/docs/5.0/api/interfaces/PriceScaleMargins)
* [PriceScaleOptions](/lightweight-charts/docs/5.0/api/interfaces/PriceScaleOptions)
* [PrimitiveHoveredItem](/lightweight-charts/docs/5.0/api/interfaces/PrimitiveHoveredItem)
* [SeriesAttachedParameter](/lightweight-charts/docs/5.0/api/interfaces/SeriesAttachedParameter)
* [SeriesDataItemTypeMap](/lightweight-charts/docs/5.0/api/interfaces/SeriesDataItemTypeMap)
* [SeriesDefinition](/lightweight-charts/docs/5.0/api/interfaces/SeriesDefinition)
* [SeriesMarkerBar](/lightweight-charts/docs/5.0/api/interfaces/SeriesMarkerBar)
* [SeriesMarkerBase](/lightweight-charts/docs/5.0/api/interfaces/SeriesMarkerBase)
* [SeriesMarkerPrice](/lightweight-charts/docs/5.0/api/interfaces/SeriesMarkerPrice)
* [SeriesMarkersOptions](/lightweight-charts/docs/5.0/api/interfaces/SeriesMarkersOptions)
* [SeriesOptionsCommon](/lightweight-charts/docs/5.0/api/interfaces/SeriesOptionsCommon)
* [SeriesOptionsMap](/lightweight-charts/docs/5.0/api/interfaces/SeriesOptionsMap)
* [SeriesPartialOptionsMap](/lightweight-charts/docs/5.0/api/interfaces/SeriesPartialOptionsMap)
* [SeriesStyleOptionsMap](/lightweight-charts/docs/5.0/api/interfaces/SeriesStyleOptionsMap)
* [SeriesUpDownMarker](/lightweight-charts/docs/5.0/api/interfaces/SeriesUpDownMarker)
* [SingleValueData](/lightweight-charts/docs/5.0/api/interfaces/SingleValueData)
* [SolidColor](/lightweight-charts/docs/5.0/api/interfaces/SolidColor)
* [TextWatermarkLineOptions](/lightweight-charts/docs/5.0/api/interfaces/TextWatermarkLineOptions)
* [TextWatermarkOptions](/lightweight-charts/docs/5.0/api/interfaces/TextWatermarkOptions)
* [TickMark](/lightweight-charts/docs/5.0/api/interfaces/TickMark)
* [TimeChartOptions](/lightweight-charts/docs/5.0/api/interfaces/TimeChartOptions)
* [TimeMark](/lightweight-charts/docs/5.0/api/interfaces/TimeMark)
* [TimeScaleOptions](/lightweight-charts/docs/5.0/api/interfaces/TimeScaleOptions)
* [TimeScalePoint](/lightweight-charts/docs/5.0/api/interfaces/TimeScalePoint)
* [TouchMouseEventData](/lightweight-charts/docs/5.0/api/interfaces/TouchMouseEventData)
* [TrackingModeOptions](/lightweight-charts/docs/5.0/api/interfaces/TrackingModeOptions)
* [UpDownMarkersPluginOptions](/lightweight-charts/docs/5.0/api/interfaces/UpDownMarkersPluginOptions)
* [VerticalGradientColor](/lightweight-charts/docs/5.0/api/interfaces/VerticalGradientColor)
* [WhitespaceData](/lightweight-charts/docs/5.0/api/interfaces/WhitespaceData)
* [YieldCurveChartOptions](/lightweight-charts/docs/5.0/api/interfaces/YieldCurveChartOptions)
* [YieldCurveOptions](/lightweight-charts/docs/5.0/api/interfaces/YieldCurveOptions)

## Type Aliases[​](#type-aliases "Direct link to Type Aliases")

* [AlphaComponent](/lightweight-charts/docs/5.0/api/type-aliases/AlphaComponent)
* [AreaSeriesOptions](/lightweight-charts/docs/5.0/api/type-aliases/AreaSeriesOptions)
* [AreaSeriesPartialOptions](/lightweight-charts/docs/5.0/api/type-aliases/AreaSeriesPartialOptions)
* [AutoscaleInfoProvider](/lightweight-charts/docs/5.0/api/type-aliases/AutoscaleInfoProvider)
* [Background](/lightweight-charts/docs/5.0/api/type-aliases/Background)
* [BarPrice](/lightweight-charts/docs/5.0/api/type-aliases/BarPrice)
* [BarSeriesOptions](/lightweight-charts/docs/5.0/api/type-aliases/BarSeriesOptions)
* [BarSeriesPartialOptions](/lightweight-charts/docs/5.0/api/type-aliases/BarSeriesPartialOptions)
* [BaseValueType](/lightweight-charts/docs/5.0/api/type-aliases/BaseValueType)
* [BaselineSeriesOptions](/lightweight-charts/docs/5.0/api/type-aliases/BaselineSeriesOptions)
* [BaselineSeriesPartialOptions](/lightweight-charts/docs/5.0/api/type-aliases/BaselineSeriesPartialOptions)
* [BlueComponent](/lightweight-charts/docs/5.0/api/type-aliases/BlueComponent)
* [CandlestickSeriesOptions](/lightweight-charts/docs/5.0/api/type-aliases/CandlestickSeriesOptions)
* [CandlestickSeriesPartialOptions](/lightweight-charts/docs/5.0/api/type-aliases/CandlestickSeriesPartialOptions)
* [ChartOptions](/lightweight-charts/docs/5.0/api/type-aliases/ChartOptions)
* [ColorSpace](/lightweight-charts/docs/5.0/api/type-aliases/ColorSpace)
* [Coordinate](/lightweight-charts/docs/5.0/api/type-aliases/Coordinate)
* [CreatePriceLineOptions](/lightweight-charts/docs/5.0/api/type-aliases/CreatePriceLineOptions)
* [CustomColorParser](/lightweight-charts/docs/5.0/api/type-aliases/CustomColorParser)
* [CustomSeriesOptions](/lightweight-charts/docs/5.0/api/type-aliases/CustomSeriesOptions)
* [CustomSeriesPartialOptions](/lightweight-charts/docs/5.0/api/type-aliases/CustomSeriesPartialOptions)
* [CustomSeriesPricePlotValues](/lightweight-charts/docs/5.0/api/type-aliases/CustomSeriesPricePlotValues)
* [DataChangedHandler](/lightweight-charts/docs/5.0/api/type-aliases/DataChangedHandler)
* [DataChangedScope](/lightweight-charts/docs/5.0/api/type-aliases/DataChangedScope)
* [DataItem](/lightweight-charts/docs/5.0/api/type-aliases/DataItem)
* [DeepPartial](/lightweight-charts/docs/5.0/api/type-aliases/DeepPartial)
* [GreenComponent](/lightweight-charts/docs/5.0/api/type-aliases/GreenComponent)
* [HistogramSeriesOptions](/lightweight-charts/docs/5.0/api/type-aliases/HistogramSeriesOptions)
* [HistogramSeriesPartialOptions](/lightweight-charts/docs/5.0/api/type-aliases/HistogramSeriesPartialOptions)
* [HorzAlign](/lightweight-charts/docs/5.0/api/type-aliases/HorzAlign)
* [HorzScaleItemConverterToInternalObj](/lightweight-charts/docs/5.0/api/type-aliases/HorzScaleItemConverterToInternalObj)
* [HorzScalePriceItem](/lightweight-charts/docs/5.0/api/type-aliases/HorzScalePriceItem)
* [IImageWatermarkPluginApi](/lightweight-charts/docs/5.0/api/type-aliases/IImageWatermarkPluginApi)
* [IPanePrimitive](/lightweight-charts/docs/5.0/api/type-aliases/IPanePrimitive)
* [ISeriesPrimitive](/lightweight-charts/docs/5.0/api/type-aliases/ISeriesPrimitive)
* [ITextWatermarkPluginApi](/lightweight-charts/docs/5.0/api/type-aliases/ITextWatermarkPluginApi)
* [InternalHorzScaleItem](/lightweight-charts/docs/5.0/api/type-aliases/InternalHorzScaleItem)
* [InternalHorzScaleItemKey](/lightweight-charts/docs/5.0/api/type-aliases/InternalHorzScaleItemKey)
* [LastValueDataResult](/lightweight-charts/docs/5.0/api/type-aliases/LastValueDataResult)
* [LineSeriesOptions](/lightweight-charts/docs/5.0/api/type-aliases/LineSeriesOptions)
* [LineSeriesPartialOptions](/lightweight-charts/docs/5.0/api/type-aliases/LineSeriesPartialOptions)
* [LineWidth](/lightweight-charts/docs/5.0/api/type-aliases/LineWidth)
* [Logical](/lightweight-charts/docs/5.0/api/type-aliases/Logical)
* [LogicalRange](/lightweight-charts/docs/5.0/api/type-aliases/LogicalRange)
* [LogicalRangeChangeEventHandler](/lightweight-charts/docs/5.0/api/type-aliases/LogicalRangeChangeEventHandler)
* [MouseEventHandler](/lightweight-charts/docs/5.0/api/type-aliases/MouseEventHandler)
* [Mutable](/lightweight-charts/docs/5.0/api/type-aliases/Mutable)
* [Nominal](/lightweight-charts/docs/5.0/api/type-aliases/Nominal)
* [OverlayPriceScaleOptions](/lightweight-charts/docs/5.0/api/type-aliases/OverlayPriceScaleOptions)
* [PercentageFormatterFn](/lightweight-charts/docs/5.0/api/type-aliases/PercentageFormatterFn)
* [PriceFormat](/lightweight-charts/docs/5.0/api/type-aliases/PriceFormat)
* [PriceFormatterFn](/lightweight-charts/docs/5.0/api/type-aliases/PriceFormatterFn)
* [PriceToCoordinateConverter](/lightweight-charts/docs/5.0/api/type-aliases/PriceToCoordinateConverter)
* [PrimitiveHasApplyOptions](/lightweight-charts/docs/5.0/api/type-aliases/PrimitiveHasApplyOptions)
* [PrimitivePaneViewZOrder](/lightweight-charts/docs/5.0/api/type-aliases/PrimitivePaneViewZOrder)
* [RedComponent](/lightweight-charts/docs/5.0/api/type-aliases/RedComponent)
* [Rgba](/lightweight-charts/docs/5.0/api/type-aliases/Rgba)
* [SeriesMarker](/lightweight-charts/docs/5.0/api/type-aliases/SeriesMarker)
* [SeriesMarkerBarPosition](/lightweight-charts/docs/5.0/api/type-aliases/SeriesMarkerBarPosition)
* [SeriesMarkerPosition](/lightweight-charts/docs/5.0/api/type-aliases/SeriesMarkerPosition)
* [SeriesMarkerPricePosition](/lightweight-charts/docs/5.0/api/type-aliases/SeriesMarkerPricePosition)
* [SeriesMarkerShape](/lightweight-charts/docs/5.0/api/type-aliases/SeriesMarkerShape)
* [SeriesMarkerZOrder](/lightweight-charts/docs/5.0/api/type-aliases/SeriesMarkerZOrder)
* [SeriesOptions](/lightweight-charts/docs/5.0/api/type-aliases/SeriesOptions)
* [SeriesPartialOptions](/lightweight-charts/docs/5.0/api/type-aliases/SeriesPartialOptions)
* [SeriesType](/lightweight-charts/docs/5.0/api/type-aliases/SeriesType)
* [SizeChangeEventHandler](/lightweight-charts/docs/5.0/api/type-aliases/SizeChangeEventHandler)
* [TickMarkFormatter](/lightweight-charts/docs/5.0/api/type-aliases/TickMarkFormatter)
* [TickMarkWeightValue](/lightweight-charts/docs/5.0/api/type-aliases/TickMarkWeightValue)
* [TickmarksPercentageFormatterFn](/lightweight-charts/docs/5.0/api/type-aliases/TickmarksPercentageFormatterFn)
* [TickmarksPriceFormatterFn](/lightweight-charts/docs/5.0/api/type-aliases/TickmarksPriceFormatterFn)
* [Time](/lightweight-charts/docs/5.0/api/type-aliases/Time)
* [TimeFormatterFn](/lightweight-charts/docs/5.0/api/type-aliases/TimeFormatterFn)
* [TimePointIndex](/lightweight-charts/docs/5.0/api/type-aliases/TimePointIndex)
* [TimeRangeChangeEventHandler](/lightweight-charts/docs/5.0/api/type-aliases/TimeRangeChangeEventHandler)
* [UTCTimestamp](/lightweight-charts/docs/5.0/api/type-aliases/UTCTimestamp)
* [UpDownMarkersSupportedSeriesTypes](/lightweight-charts/docs/5.0/api/type-aliases/UpDownMarkersSupportedSeriesTypes)
* [VertAlign](/lightweight-charts/docs/5.0/api/type-aliases/VertAlign)
* [VisiblePriceScaleOptions](/lightweight-charts/docs/5.0/api/type-aliases/VisiblePriceScaleOptions)
* [YieldCurveSeriesType](/lightweight-charts/docs/5.0/api/type-aliases/YieldCurveSeriesType)

## Variables[​](#variables "Direct link to Variables")

* [AreaSeries](/lightweight-charts/docs/5.0/api/variables/AreaSeries)
* [BarSeries](/lightweight-charts/docs/5.0/api/variables/BarSeries)
* [BaselineSeries](/lightweight-charts/docs/5.0/api/variables/BaselineSeries)
* [CandlestickSeries](/lightweight-charts/docs/5.0/api/variables/CandlestickSeries)
* [HistogramSeries](/lightweight-charts/docs/5.0/api/variables/HistogramSeries)
* [LineSeries](/lightweight-charts/docs/5.0/api/variables/LineSeries)
* [customSeriesDefaultOptions](/lightweight-charts/docs/5.0/api/variables/customSeriesDefaultOptions)

## Functions[​](#functions "Direct link to Functions")

* [createChart](/lightweight-charts/docs/5.0/api/functions/createChart)
* [createChartEx](/lightweight-charts/docs/5.0/api/functions/createChartEx)
* [createImageWatermark](/lightweight-charts/docs/5.0/api/functions/createImageWatermark)
* [createOptionsChart](/lightweight-charts/docs/5.0/api/functions/createOptionsChart)
* [createSeriesMarkers](/lightweight-charts/docs/5.0/api/functions/createSeriesMarkers)
* [createTextWatermark](/lightweight-charts/docs/5.0/api/functions/createTextWatermark)
* [createUpDownMarkers](/lightweight-charts/docs/5.0/api/functions/createUpDownMarkers)
* [createYieldCurveChart](/lightweight-charts/docs/5.0/api/functions/createYieldCurveChart)
* [defaultHorzScaleBehavior](/lightweight-charts/docs/5.0/api/functions/defaultHorzScaleBehavior)
* [isBusinessDay](/lightweight-charts/docs/5.0/api/functions/isBusinessDay)
* [isUTCTimestamp](/lightweight-charts/docs/5.0/api/functions/isUTCTimestamp)
* [version](/lightweight-charts/docs/5.0/api/functions/version)